@@ -4,13 +4,13 @@ use ExtUtils::MakeMaker;
 WriteMakefile(
 	NAME				=> "File::PathInfo",
 	VERSION_FROM	=> 'lib/File/PathInfo.pm',
+   ABSTRACT_FROM  => 'lib/File/PathInfo.pod',
+
 	PREREQ_PM 		=> {
 		'Time::Format' => '0.01',
       'Smart::Comments' => '0',
 		'Cwd'	=> '0.1',
 	},
-	'dist'			=> { COMPRESS => 'gzip', SUFFIX => 'gz' },
-   ABSTRACT_FROM => 'lib/File/PathInfo.pod',
    LICENSE => 'perl',
    AUTHOR => 'Leo Charre leocharre at cpan dot org',
 );
