@@ -10,11 +10,23 @@ $ENV{DOCUMENT_ROOT} = cwd().'/t/public_html';
 use Carp;
 
 
+
+
 ok(1,'started test 1..');
 if($^O=~/^dos|os2|mswin32|mswin|netware/i){
    print STDERR "File::PathInfo will not work on non posix platforms\n";
    exit;
 }
+
+my $a1 = File::PathInfo->new;
+ok($a1) or die;
+ok( ! $a1->set('/i do not exist/at all/'.time() ),'set()');
+
+
+
+
+
+
 
 # test ones we know are in docroot
 for (qw(
@@ -25,7 +37,7 @@ demo
 demo/../demo/civil.txt
 demo/civil.txt
 )){
-	
+	spc();
 	my $argument = $_;
 	my $f = new File::PathInfo($argument) or die( $File::PathInfo::errstr );
 #	my $f = new File::PathInfo or die( $File::PathInfo::errstr );
@@ -65,15 +77,18 @@ for (
 './t/public_html',
 './t/0_fpi.t',
 ){
-	
+	spc();
 	my $argument = $_;
+   my $abs = Cwd::abs_path($_) or die;
 	my $f = new File::PathInfo or die( $File::PathInfo::errstr );
-	$f->set($argument);
-	ok($f);
-	ok($f->filename);
-	ok($f->abs_path);
-	ok($f->abs_loc);
-	ok(!$f->is_in_DOCUMENT_ROOT);
+	my $val = $f->set($argument);
+   ok( $val eq $abs ,'set() returns expected') or die("expected '$abs', got '$val'");
+
+	ok($f,'instanced');
+	ok($f->filename,'filename()');
+	ok($f->abs_path,'abs_path()');
+	ok($f->abs_loc,'abs_loc()');
+	ok(!$f->is_in_DOCUMENT_ROOT,'is_in_DOCUMENT_ROOT()');
 
 	
 
@@ -129,9 +144,7 @@ for (
 	
 	ok( ! $f->set($argument)  ,"set() for '$argument' should fail");
 	
-#	my $exists = $f->set($argument);
- #  $exists ||= 0;
-
-  # ok(!$exists);
 }   
+
+sub spc { warn "\n\n". '-'x80 ."\n" }
 
