@@ -1,3 +1,8 @@
+2009-11-14 12:42  cvs
+
+	* lib/File/PathInfo.pm, lib/File/PathInfo.pod, t/0_fpi.t: made sure
+	  that set() returns abs path resolved to resource
+
 2009-08-29 20:01  cvs
 
 	* Changes, File-PathInfo-1.08.tar.gz, File-PathInfo-1.09.tar.gz,
